--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .App {
   text-align: center;
+
 }
 
 .App-logo {
@@ -14,14 +20,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
+  margin-bottom: 50px;
 }
 
 .App-link {
@@ -35,4 +42,72 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App{
+  display: flex;
+  background-color: #282c34;
+  padding: 50px 75px;
+  flex: 1;
+}
+
+
+.App__part {
+  flex: 33%;
+}
+
+.__side_box{
+  border-radius: 25px;
+  background-color: #777f8f;
+  border: 1px solid #ced0d4;
+  padding: 15px 25px;
+  height: 100%;  
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-body__view {
+  border-radius: 15px;
+  background-color: #ced0d4;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  flex: 1;
+  overflow-y: auto;
+  height: 80%;
+  max-height: 580px;
+}
+
+.chat-body__subtext{
+  text-align: left;
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+.chat-body__tasktext{
+  text-align: left;
+  font-weight: 600;
+}
+
+.chat-button {
+  width: 100%;
+  min-width: 120px;
+  text-align: center;
+  height: 48px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.message-content {
+  padding: 15px;
+  margin-bottom: 10px;
+}
+
+.text-content {
+  text-align: right;
+}
+
+.text-content__time{
+  text-transform: uppercase;
+  font-weight: 600;
+  text-align: left;
 }
